OptimizeStringConcat causing core dumps

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs17
    • Affects Version/s: hs17, 6u18
    • Component/s: hotspot
    • None
    • b10
    • sparc, itanium
    • solaris_10

        When I run tests with HS17 builds and -XX:+OptimizeStringConcat, the JVM will eventually core dump:

        Error: guarantee(cont_offset != 0,"unhandled implicit exception in compiled code")

        This happens only when -XX:+OptimizeStringConcat is enabled, so it seems different than 6914436, though of course they may have the same root cause. I have been using OptimizeStringConcat on HS17 in the latest JDK7 build but also in JDK6 builds my moving the libjvm.so

        I have attached the fastdebug output and hs_err file; core file is at ftp://javaperf.sfbay/pub/cores/core.stringconcat.gz. And yes, it's one of those bugs I can only reproduce on our big spec tests, though it reproduces quite easily so I can get more info quickly.

              Assignee:
              Tom Rodriguez
              Reporter:
              Scott Oaks (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: