6920293: OptimizeStringConcat causing core dumps

Reviewed-by: kvn, twisti